# fit4012-lab7-sha-starter-kit-vanhieupc

./: CMakeLists.txt  Makefile  README.md  file_integrity.cpp  password_hash.cpp  report-1page.md  salted_password_hash.cpp  sha256_lib.h  sha_procedure.cpp
scripts/: run_sample.sh
tests/: test_file_integrity_tamper.sh  test_known_vectors.sh  test_password_hash.sh  test_salted_password.sh  test_sha_compile.sh
